--- a/apps/components/package.json
+++ b/apps/components/package.json
@@ -2,10 +2,15 @@
   "name": "@asyncapi/generator-components",
   "version": "1.0.0",
   "description": "Package with reusable components for generation using React render engine",
-  "main": "src/index.js",
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "build": "babel src --out-dir lib",
+    "prepublishOnly": "npm run build",
+    "lint": "eslint --max-warnings 0 --config ../../.eslintrc --ignore-path ../../.eslintignore .",
+    "lint:fix": "eslint --max-warnings 0 --config ../../.eslintrc --ignore-path ../../.eslintignore . --fix",
+    "generate:assets": "npm run prepublishOnly"
   },
+  "main": "lib/index.js", 
   "repository": {
     "type": "git",
     "url": "https://github.com/asyncapi/generator/apps/components"
@@ -17,6 +22,10 @@
     "@asyncapi/modelina": "^4.0.0-next.62"
   },
   "devDependencies": {
+    "@babel/cli": "^7.25.9",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
     "jest-esm-transformer": "^1.0.0"
   },
   "jest": {
