make sure tests pass

--- a/apps/components/package.json
+++ b/apps/components/package.json
@@ -4,6 +4,7 @@
   "description": "Package with reusable components for generation using React render engine",
   "scripts": {
     "test": "jest --coverage",
+    "test:update": "jest --coverage -u",
     "build": "babel src --out-dir lib",
     "prepublishOnly": "npm run build",
     "lint": "eslint --max-warnings 0 --config ../../.eslintrc --ignore-path ../../.eslintignore .",
@@ -33,9 +34,6 @@
       "js",
       "json",
       "jsx"
-    ],
-    "setupFilesAfterEnv": [
-      "./test/setupTests.js"
     ],
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
