--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,7 @@
       "persistent": true
     },
     "test": { "cache": false },
+    "test:update": { "cache": false },
     "test:unit": {"cache":false},
     "test:integration": {"cache": false},
     "test:cli": {},
