--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "test": "turbo run test",
-    "test:update": "turbo run test:update",
     "lint": "turbo lint",
     "lint:fix": "turbo run lint:fix",
     "generate:assets": "turbo run generate:assets && npm run generate:readme:toc",
@@ -25,7 +24,8 @@
     "nunjucks-filters:test": "turbo run test --filter=@asyncapi/nunjucks-filters",
     "components:test": "turbo run test --filter=@asyncapi/generator-components",
     "components:build": "turbo run build --filter=@asyncapi/generator-components",
-    "components:lint": "turbo run lint --filter=@asyncapi/generator-components"
+    "components:lint": "turbo run lint --filter=@asyncapi/generator-components",
+    "templates:test": "turbo run test --filter=@asyncapi/template*"
   },
   "devDependencies": {
     "markdown-toc": "^1.2.0",
@@ -37,6 +37,6 @@
   "packageManager": "npm@9.5.0",
   "workspaces": [
     "apps/*",
-    "packages/*"
+    "packages/**"
   ]
 }
