move helpers as independent package

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "components:test": "turbo run test --filter=@asyncapi/generator-components",
     "components:build": "turbo run build --filter=@asyncapi/generator-components",
     "components:lint": "turbo run lint --filter=@asyncapi/generator-components",
+    "helpers:test": "turbo run test --filter=@asyncapi/generator-helpers",
+    "helpers:lint": "turbo run lint --filter=@asyncapi/generator-helpers",
     "templates:test": "turbo run test --filter=@asyncapi/template*"
   },
   "devDependencies": {
