--- a/packages/templates/clients/js/websocket/package.json
+++ b/packages/templates/clients/js/websocket/package.json
@@ -10,10 +10,11 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@asyncapi/generator-react-sdk": "^1.1.2",
-    "@asyncapi/parser": "^3.0.14",
+    "@asyncapi/generator-helpers": "*",
     "rimraf": "^3.0.2"
   },
   "devDependencies": {
+    "@asyncapi/parser": "^3.0.14",
     "@babel/cli": "^7.25.9",
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
