--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,2 +1,2 @@
 #we need to explicitly exclude them as some are commit to the repo
-sonar.exclusions=**/test/**/*,**/__transpiled/
+sonar.exclusions=**/test/**/*,**/*__transpiled/**/*.js
