--- a/apps/generator/package.json
+++ b/apps/generator/package.json
@@ -87,7 +87,6 @@
     "jsdoc-to-markdown": "^7.1.1",
     "markdown-toc": "^1.2.0",
     "rimraf": "^3.0.2",
-    "unixify": "^1.0.0",
-    "@asyncapi/generator-components": "*"
+    "unixify": "^1.0.0"
   }
 }
