update complex tests to use locally manually published package

--- a/apps/generator/test/test-project/verdaccio/config.yaml
+++ b/apps/generator/test/test-project/verdaccio/config.yaml
@@ -10,7 +10,13 @@ packages:
   "react-template":
     access: admin
     publish: admin
+  "@asyncapi/generator-components":
+    access: admin
+    publish: admin
   "!react-template":
+    access: admin
+    proxy: npmjs
+  "!@asyncapi/generator-components":
     access: admin
     proxy: npmjs
 log: { type: stdout, format: pretty, level: error }
