--- a/apps/generator/.gitignore
+++ b/apps/generator/.gitignore
@@ -19,3 +19,4 @@ test/temp/reactTemplate
 test/test-project/package-lock.json
 test/test-project/verdaccio/storage/
 test/test-project/storage/
+__transpiled
