--- a/apps/generator/package.json
+++ b/apps/generator/package.json
@@ -63,8 +63,9 @@
     "fs.extra": "^1.3.2",
     "global-dirs": "^3.0.0",
     "jmespath": "^0.15.0",
+    "pacote": "^15.1.1",
     "js-yaml": "^3.13.1",
-    "levenshtein-edit-distance": "^2.0.5",
+    "levenshtein-edit-distance": "^2.0.5pacote",
     "loglevel": "^1.6.8",
     "minimatch": "^3.0.4",
     "node-fetch": "^2.6.0",
