--- a/apps/generator/package.json
+++ b/apps/generator/package.json
@@ -65,7 +65,7 @@
     "jmespath": "^0.15.0",
     "pacote": "^15.1.1",
     "js-yaml": "^3.13.1",
-    "levenshtein-edit-distance": "^2.0.5pacote",
+    "levenshtein-edit-distance": "^2.0.5",
     "loglevel": "^1.6.8",
     "minimatch": "^3.0.4",
     "node-fetch": "^2.6.0",
