--- a/apps/generator/package.json
+++ b/apps/generator/package.json
@@ -12,12 +12,11 @@
     "npm": ">=8.19.0"
   },
   "scripts": {
-    "test": "npm run test:unit && npm run test:integration && npm run test:cli",
+    "test": "npm run test:unit && npm run test:integration",
     "test:unit": "jest --coverage --testPathIgnorePatterns=integration --testPathIgnorePatterns=test-project",
     "test:dev": "npm run test:unit -- --watchAll",
     "test:integration": "npm run test:cleanup && jest --testPathPattern=integration --modulePathIgnorePatterns='./__mocks__(?!\\/loglevel\\.js$)'",
     "test:integration:update": "jest --updateSnapshot --testPathPattern=integration --modulePathIgnorePatterns='./__mocks__(?!\\/loglevel\\.js$)'",
-    "test:cli": "node cli.js ./test/docs/dummy.yml ./test/test-templates/react-template -o test/output --force-write --debug && test -e test/output/test-file.md",
     "test:cleanup": "rimraf \"test/temp\"",
     "docs": "jsdoc2md --partial docs/jsdoc2md-handlebars/custom-sig-name.hbs docs/jsdoc2md-handlebars/main.hbs docs/jsdoc2md-handlebars/docs.hbs docs/jsdoc2md-handlebars/header.hbs docs/jsdoc2md-handlebars/defaultvalue.hbs docs/jsdoc2md-handlebars/link.hbs docs/jsdoc2md-handlebars/params-table.hbs --files lib/generator.js > docs/api.md",
     "docker:build": "docker build -t asyncapi/generator:latest .",
@@ -82,7 +81,7 @@
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-sonarjs": "^0.5.0",
-    "fs-extra": "9.1.0",
+    "fs-extra": "11.2.0",
     "jest": "^27.3.1",
     "jsdoc-to-markdown": "^7.1.1",
     "markdown-toc": "^1.2.0",
