--- a/.github/workflows/pr-testing-with-test-project.yml
+++ b/.github/workflows/pr-testing-with-test-project.yml
@@ -33,6 +33,10 @@ jobs:
       matrix:
         node: ["18", "20"]
     steps:
+      - name: Debug modified files
+        run: |
+          echo "Modified files:"
+          echo "${{ toJson(github.event.pull_request.files.*.path) }}"
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Run test
