--- a/.github/workflows/pr-testing-with-test-project.yml
+++ b/.github/workflows/pr-testing-with-test-project.yml
@@ -1,37 +1,33 @@
+#This workflow runs the tests in the test projects to make sure the generator works as a library where it is a Node dependency along with the template.
 name: Test using test project
 
 on:
   pull_request:
     types: [opened, reopened, synchronize, ready_for_review]
-    paths:
-      - 'package.json'
-      - 'package-lock.json'
-      - 'apps/**'
-      - 'packages/**'
-      - '.github/workflows/**'
-      - '!**/*.md'
-      - '!docs/**'
 
 jobs:
-  should-test:
+  changes:
     runs-on: ubuntu-latest
     outputs:
-      run_tests: ${{ steps.check.outputs.run_tests }}
+      should_test: ${{ steps.filter.outputs.changes }}
     steps:
-      - name: Check if tests should run
-        id: check
-        run: |
-          # Skip for bot PRs with specific titles
-          if [[ "${{ github.actor }}" == "asyncapi-bot" && "${{ github.event.pull_request.title }}" =~ ^(ci:\ update|chore\(release\):) ]] || \
-             [[ "${{ github.actor }}" == "allcontributors[bot]" && "${{ github.event.pull_request.title }}" =~ ^docs: ]]; then
-            echo "run_tests=false" >> $GITHUB_OUTPUT
-          else
-            echo "run_tests=true" >> $GITHUB_OUTPUT
-          fi
+      - uses: actions/checkout@v3
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            changes:
+              - 'package.json'
+              - 'package-lock.json'
+              - 'apps/**'
+              - 'packages/**'
+              - '.github/workflows/**'
+              - '!**/*.md'
+              - '!docs/**'
 
   test:
-    needs: should-test
-    if: needs.should-test.outputs.run_tests == 'true' && github.event.pull_request.draft == false
+    needs: changes
+    if: ${{ needs.changes.outputs.should_test == 'true' && github.event.pull_request.draft == false }}
     name: Test generator as dependency with Node ${{ matrix.node }}
     runs-on: ubuntu-latest
     strategy:
@@ -40,7 +36,25 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-        
-      - name: Run test
+      - name: Determine if tests should run
+        id: should_run
+        if: >
+          !github.event.pull_request.draft && !(
+            (github.actor == 'asyncapi-bot' && (
+              startsWith(github.event.pull_request.title, 'ci: update of files from global .github repo') || 
+              startsWith(github.event.pull_request.title, 'chore(release):')
+            )) ||
+            (github.actor == 'asyncapi-bot-eve' && (
+              startsWith(github.event.pull_request.title, 'ci: update of files from global .github repo') || 
+              startsWith(github.event.pull_request.title, 'chore(release):')
+            )) ||
+            (github.actor == 'allcontributors[bot]' && 
+              startsWith(github.event.pull_request.title, 'docs: add')
+            )
+          )
+        run: echo "shouldrun=true" >> $GITHUB_OUTPUT
+        shell: bash
+      - if: steps.should_run.outputs.shouldrun == 'true'
+        name: Run test
         run: NODE_IMAGE_TAG=${{ matrix.node }} docker compose up --abort-on-container-exit --remove-orphans --force-recreate
         working-directory: ./apps/generator/test/test-project
