--- a/.github/workflows/pr-testing-with-test-project.yml
+++ b/.github/workflows/pr-testing-with-test-project.yml
@@ -4,14 +4,6 @@ name: Test using test project
 on:
   pull_request:
     types: [opened, reopened, synchronize, ready_for_review]
-    paths:
-      - 'package.json'
-      - 'package-lock.json'
-      - 'apps/**'
-      - 'packages/**'
-      - '.github/workflows/**'
-      - '!**/*.md'
-      - '!docs/**'
 
 jobs:
   changes:
@@ -19,7 +11,7 @@ jobs:
     outputs:
       should_test: ${{ steps.filter.outputs.changes }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3 https://github.com/actions/checkout/releases/tag/v3
       - uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2 https://github.com/dorny/paths-filter/releases/tag/v3.0.2
         id: filter
         with:
@@ -43,8 +35,7 @@ jobs:
         node: ["18", "20"]
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
-        
+        uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 
       - name: Determine if tests should run
         id: should_run
         if: >
@@ -63,7 +54,6 @@ jobs:
           )
         run: echo "shouldrun=true" >> $GITHUB_OUTPUT
         shell: bash
-
       - if: steps.should_run.outputs.shouldrun == 'true'
         name: Run test
         run: NODE_IMAGE_TAG=${{ matrix.node }} docker compose up --abort-on-container-exit --remove-orphans --force-recreate
