--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "generator:lint:tpl:validator": "turbo run lint:tpl:validator --filter=@asyncapi/generator",
     "generator:update:snapshot": "turbo run test:integration:update --filter=@asyncapi/generator",
     "nunjucks-filters:test": "turbo run test --filter=@asyncapi/nunjucks-filters",
+    "nunjucks-filters:docs": "turbo run docs --filter=@asyncapi/nunjucks-filters",
+    "nunjucks-filters:lint": "turbo run lint --filter=@asyncapi/nunjucks-filters",
+    "nunjucks-filters:lint:fix": "turbo run lint:fix --filter=@asyncapi/nunjucks-filters",
     "components:test": "turbo run test --filter=@asyncapi/generator-components",
     "components:build": "turbo run build --filter=@asyncapi/generator-components",
     "components:lint": "turbo run lint --filter=@asyncapi/generator-components",
