added all-contributorsrc in ignored list

--- a/.github/workflows/pr-testing-with-test-project.yml
+++ b/.github/workflows/pr-testing-with-test-project.yml
@@ -24,6 +24,7 @@ jobs:
               - '.github/workflows/**'
               - '!**/*.md'
               - '!docs/**'
+              - '!.all-contributorsrc'
 
   test:
     needs: changes
