ci: exclude .all-contributorsrc from test workflow triggers (#1358)
Co-authored-by: AdityaP700 <126982848+AdityaP700@users.noreply.github.com>
Co-authored-by: Lukasz Gornicki <lpgornicki@gmail.com>
Co-authored-by: Chan <bot+chan@asyncapi.io>

--- a/.github/workflows/pr-testing-with-test-project.yml
+++ b/.github/workflows/pr-testing-with-test-project.yml
@@ -24,7 +24,7 @@ jobs:
               - '.github/workflows/**'
               - '!**/*.md'
               - '!docs/**'
-
+              - '!.all-contributorsrc'
   test:
     needs: changes
     if: ${{ needs.changes.outputs.should_test == 'true' && github.event.pull_request.draft == false }}
