--- a/.github/workflows/pr-testing-with-test-project.yml
+++ b/.github/workflows/pr-testing-with-test-project.yml
@@ -9,21 +9,21 @@ jobs:
   changes:
     runs-on: ubuntu-latest
     outputs:
-      should_test: ${{ steps.filter.outputs.changes }}
+      should_test: ${{ steps.filter.outputs.modified_files !='[]' }}
     steps:
       - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3 https://github.com/actions/checkout/releases/tag/v3
       - uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2 https://github.com/dorny/paths-filter/releases/tag/v3.0.2
         id: filter
         with:
           filters: |
-            changes:
+            modified_files:
               - 'package.json'
               - 'package-lock.json'
-              - 'apps/**'
-              - 'packages/**'
-              - '.github/workflows/**'
-              - '!**/*.md'
-              - '!docs/**'
+              - 'apps/'
+              - 'packages/'
+              - '.github/workflows/'
+              - '!/*.md'
+              - '!docs/'
               - '!.all-contributorsrc'
   test:
     needs: changes
