--- a/packages/templates/clients/python/websocket/package.json
+++ b/packages/templates/clients/python/websocket/package.json
@@ -60,7 +60,8 @@
       "clientFileName": {
         "description": "The name of the generated client file",
         "required": false,
-        "default": "client.js"
+-       "default": "client.js"
++       "default": "client.py"
       }
     }
   }
