--- a/packages/templates/clients/js/websocket/package.json
+++ b/packages/templates/clients/js/websocket/package.json
@@ -11,7 +11,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@asyncapi/generator-react-sdk": "^1.1.2",
-    "@asyncapi/generator-helpers": "1.0.0",
+    "@asyncapi/generator-helpers": "*",
     "rimraf": "^3.0.2"
   },
   "devDependencies": {
