--- a/turbo.json
+++ b/turbo.json
@@ -13,6 +13,10 @@
       "dependsOn": ["build"],
       "cache": false 
     },
+    "test:hooks": { 
+      "dependsOn": ["build"],
+      "cache": false 
+    },
     "test:update": { "cache": false },
     "test:unit": {"cache":false},
     "test:integration": {"cache": false},
