Revert "Resolved merge conflict in generator-template.md"
This reverts commit 9040e986e9be2c426e1f02b56c3b7f26ebb42c5e, reversing
changes made to 6e8a89336b4fc5f380236ae37e969218ce4ea459.

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,3 +1,2 @@
 #we need to explicitly exclude them as some are commit to the repo
-sonar.exclusions=**/test/**/*,**/*__transpiled/**/*.js,packages/templates/clients/**/*
-#TODO remove packages/templates/clients/**/* when we are more advanced with templates development and the structure of templates is finalized
+sonar.exclusions=**/test/**/*,**/*__transpiled/**/*.js,packages/templates/clients/js/websocket/example.js,
